# compas_rcf

./: .buildinfo  .bumpversion.cfg  .deepsource.toml  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  authors.html  changelog.html  contributing.html  genindex.html  index.html  installation.html  known_issues.html  license.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  reference.html  requirements-dev.txt  search.html  searchindex.js  setup.cfg  setup.py  system.xml  tasks.py  tf_static_cmd.sh  usage.html
.doctrees/: authors.doctree  changelog.doctree  contributing.doctree  index.doctree  installation.doctree  known_issues.doctree  license.doctree  reference.doctree  usage.doctree
BACKINFO/: backinfo.txt  controller.rsf  fpsystem.xml  program.id  rw6system.xml  sc_cfg.xml  scimageversion
SYSPAR/: EIO.cfg  MMC.cfg  MOC.cfg  SIO.cfg
_modules/: index.html
docker_ursim/: docker-compose.yaml
docs/: CNAME  api.rst  conf.py  examples.rst  getting_started.rst  index.rst  installation.rst  known_issues.rst  reference.rst  usage.rst
docsource/: api.rst  conf.py  index.rst
grasshopper/: abb_robot_control.gh  abb_robot_control.ghx  create_edit_fab_data.gh  create_edit_fab_data.ghx  create_rapid_tooldata.gh  create_rapid_tooldata.ghx  create_run_data.gh  create_run_data.ghx  localization.gh  localization.ghx  path_planning.gh  path_planning.ghx  pick_conf_creator.gh  pick_conf_creator.ghx  pick_frame_list_generator.ghx
rcf/: utils.py
rcf/ur/: comm.py  (+4 more)
(+451 files in other folders)
