[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]

[tool.setuptools_scm]
write_to = "src/_version.py"

[tool.autopep8]
max-line-length = 120

[tool.isort]
force_single_line = true
line_length = 120
known_first_party = "rapid_clay_formations_fab"
known_third_party = "compas,compas_fab,compas_rrc,Rhino"
default_section = "THIRDPARTY"
add_imports = "__future__.absolute_import,__future__.division,__future__.print_function"
skip = "_version.py"

[tool.black]
target-version = ['py27']
